<resources>
    <string name="app_name">SmartPhoneBook</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="enter_a_phone_number">Enter A Phone Number</string>
    <string name="export_contacts">Export Contacts</string>
    <string name="export">Export</string>
    <string name="not_now">Not Now</string>
    <string name="call">Call</string>
    <string name="contact_list">Contact List</string>
    <string name="message">Message</string>
    <string name="call_history">History</string>
    <color name="tab_color">#FF4535FF</color>
    <color name="main_text_color">#ffffc39b</color>
    <string name="numbers">Numbers</string>
    <string name="locations">Locations</string>
    <string name="modify">Modify</string>
    <string name="delete">Delete</string>
    <string name="back">Back</string>
    <string name="question_delete_contact">Do you want to delete contact?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="mobile">Mobile</string>
    <string name="home">Home</string>
    <string name="work">Work</string>
    <string name="add">Add</string>
    <string name="new_message">New Message</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="home_number">Home Number</string>
    <string name="work_number">Work Number</string>
    <string name="home_location">Home Location</string>
    <string name="work_location">Work Location</string>
    <string name="click_for_work_location">Click here for work location!</string>
    <string name="click_for_home_location">Click here for home location!</string>
    <string name="email">Email</string>
    <string name="search">Search</string>
    <string name="update">Update</string>
</resources>
